[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/version.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/title.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/characters.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/label_start.png" type="Texture" id=4]
[ext_resource path="res://menus/Start.gd" type="Script" id=5]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 80
custom_constants/margin_top = 120
custom_constants/margin_left = 80
custom_constants/margin_bottom = 120
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 80.0
margin_top = 120.0
margin_right = 1286.0
margin_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 537.0
margin_bottom = 528.0

[node name="Title" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 537.0
margin_bottom = 129.0
texture = ExtResource( 2 )

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 537.0
margin_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="Start" type="TextureRect" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 159.0
margin_right = 537.0
margin_bottom = 195.0
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Version" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 492.0
margin_right = 537.0
margin_bottom = 528.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 541.0
margin_right = 1206.0
margin_bottom = 528.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Boxes\?" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_left = 66.0
margin_top = 94.0
margin_right = 599.0
margin_bottom = 433.0
texture = ExtResource( 3 )
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/Start" to="HBoxContainer/VBoxContainer/MenuOptions/Start" method="_on_Start_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Start" to="HBoxContainer/VBoxContainer/MenuOptions/Start" method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/Start" to="HBoxContainer/VBoxContainer/MenuOptions/Start" method="_on_Start_mouse_exited"]
